--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'io.papermc.paperweight.userdev' version "2.0.0-beta.9"
 }
 
 group = 'org.eu.pcraft'
@@ -15,10 +16,11 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT"
+    paperweight.paperDevBundle("1.20.5-R0.1-SNAPSHOT")
 }
 
 def targetJavaVersion = 16
@@ -46,4 +48,8 @@ processResources {
     filesMatching('paper-plugin.yml') {
         expand props
     }
+}
+
+tasks.assemble {
+    dependsOn(tasks.reobfJar)
 }
