--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'net.minecrell.plugin-yml.bukkit' version '0.6.0'
+    id("xyz.jpenilla.run-paper") version "2.3.1"
 }
 
 group = 'org.eu.pcraft'
@@ -19,10 +20,10 @@ repositories {
 }
 
 dependencies {
-    compileOnly "io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT"
+    compileOnly 'io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT'
 }
 
-def targetJavaVersion = 16
+def targetJavaVersion = 17
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
@@ -44,4 +45,16 @@ bukkit {
     name = "PowerfulFireworks"
     main = "org.eu.pcraft.powerfulfireworks.PowerfulFireworks"
     apiVersion = "1.19"
+}
+
+runServer {
+    minecraftVersion("1.21.4")
+}
+
+tasks.withType(xyz.jpenilla.runtask.task.AbstractRun) {
+    javaLauncher = javaToolchains.launcherFor {
+        vendor = JvmVendorSpec.JETBRAINS
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+    jvmArgs("-XX:+AllowEnhancedClassRedefinition")
 }
