--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,32 @@
 plugins {
-    id 'java'
     id 'net.minecrell.plugin-yml.bukkit' version '0.6.0'
     id("xyz.jpenilla.run-paper") version "2.3.1"
+
+    id "io.papermc.paperweight.userdev" version "2.0.0-beta.10" apply false
 }
 
 group = 'org.eu.pcraft'
 version = '1.0-SNAPSHOT'
+
+allprojects {
+    apply plugin: "java"
+    apply plugin: "java-library"
+
+    java {
+        sourceCompatibility = JavaVersion.toVersion(21)
+        targetCompatibility = JavaVersion.toVersion(21)
+        toolchain.languageVersion = JavaLanguageVersion.of(21)
+    }
+
+    tasks.withType(JavaCompile).configureEach {
+        options.encoding = 'UTF-8'
+    }
+}
+
+subprojects {
+    group = rootProject.group
+    version = rootProject.version
+}
 
 repositories {
     mavenCentral()
@@ -22,24 +43,8 @@ repositories {
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT'
     compileOnly 'org.bstats:bstats-bukkit:3.0.2'
-}
 
-def targetJavaVersion = 17
-java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
+    implementation project(":nms")
 }
 
 bukkit {
@@ -58,4 +63,8 @@ tasks.withType(xyz.jpenilla.runtask.task.AbstractRun) {
         languageVersion = JavaLanguageVersion.of(21)
     }
     jvmArgs("-XX:+AllowEnhancedClassRedefinition")
+}
+
+compileJava {
+    options.release = 17
 }
