--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 plugins {
     id 'net.minecrell.plugin-yml.bukkit' version '0.6.0'
     id("xyz.jpenilla.run-paper") version "2.3.1"
+    id 'com.gradleup.shadow' version '9.0.0-beta4'
 
     id "io.papermc.paperweight.userdev" version "2.0.0-beta.10" apply false
 }
 
 group = 'org.eu.pcraft'
 version = '1.0-SNAPSHOT'
+dev = project.property("dev")
 
 allprojects {
     apply plugin: "java"
@@ -28,6 +30,11 @@ subprojects {
     version = rootProject.version
 }
 
+configurations {
+    include
+    implementation.extendsFrom(include)
+}
+
 repositories {
     mavenCentral()
     maven {
@@ -44,7 +51,7 @@ dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT'
     compileOnly 'org.bstats:bstats-bukkit:3.0.2'
 
-    implementation project(":nms")
+    include project(":nms")
 
     // lombok
     compileOnly 'org.projectlombok:lombok:1.18.36'
@@ -73,4 +80,14 @@ tasks.withType(xyz.jpenilla.runtask.task.AbstractRun) {
 
 compileJava {
     options.release = 17
+}
+
+shadowJar {
+    configurations = [project.configurations.include]
+
+    if (!dev) {
+        for (var s in new String[]{}) {
+            relocate s, "org.eu.pcraft.powerfulfireworks.${s}"
+        }
+    }
 }
