feat: NMS firework entity and event

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,14 @@ allprojects {
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
     }
+
+    dependencies {
+        // lombok
+        compileOnly 'org.projectlombok:lombok:1.18.36'
+        annotationProcessor 'org.projectlombok:lombok:1.18.36'
+        testCompileOnly 'org.projectlombok:lombok:1.18.36'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
+    }
 }
 
 subprojects {
@@ -52,12 +60,6 @@ dependencies {
     compileOnly 'org.bstats:bstats-bukkit:3.0.2'
 
     include project(":nms")
-
-    // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.36'
-    annotationProcessor 'org.projectlombok:lombok:1.18.36'
-    testCompileOnly 'org.projectlombok:lombok:1.18.36'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
 }
 
 bukkit {
