--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ configurations {
 
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT'
-    compileOnly 'org.bstats:bstats-bukkit:3.0.2'
+    include 'org.bstats:bstats-bukkit:3.0.2'
 
     include project(":nms")
 }
@@ -87,6 +87,7 @@ compileJava {
 shadowJar {
     configurations = [project.configurations.include]
 
+    relocate "org.bstats", "org.eu.pcraft.powerfulfireworks.bstats"
     if (!dev) {
         for (var s in new String[]{}) {
             relocate s, "org.eu.pcraft.powerfulfireworks.${s}"
