--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,8 @@ allprojects {
         annotationProcessor 'org.projectlombok:lombok:1.18.36'
         testCompileOnly 'org.projectlombok:lombok:1.18.36'
         testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
-        implementation 'org.spongepowered:configurate-yaml:4.1.2'
+        implementation 'org.spongepowered:configurate-yaml:4.2.0-SNAPSHOT'
+        implementation 'org.spongepowered:configurate-core:4.2.0-SNAPSHOT'
     }
 }
 
