feat: implement 1.20.4 NMS

--- a/nms/build.gradle
+++ b/nms/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     api project(":nms:common")
-    implementation project(":nms:v1_21_4")
+    compileOnly project(":nms:v1_21_4")
+    compileOnly project(':nms:v1_20_4')
 }
 
 compileJava {
