--- a/nms/v1_21_4/build.gradle
+++ b/nms/v1_21_4/build.gradle
@@ -2,7 +2,16 @@ plugins {
     id "io.papermc.paperweight.userdev"
 }
 
+
 dependencies {
     paperweight.paperDevBundle("1.21.4-R0.1-SNAPSHOT")
     api project(":nms:common")
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+        sourceCompatibility = JavaLanguageVersion.of(21)
+        targetCompatibility = JavaLanguageVersion.of(21)
+    }
 }
