feat: implement NMS 1.20.2

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     include project(":nms")
     include project(path: ":nms:v1_21_4", configuration: "reobf")
     include project(path: ":nms:v1_20_4", configuration: "reobf")
+    include project(path: ":nms:v1_20_2", configuration: "reobf")
 }
 
 bukkit {
