--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     include project(path: ":nms:v1_21_4", configuration: "reobf")
     include project(path: ":nms:v1_20_4", configuration: "reobf")
     include project(path: ":nms:v1_20_2", configuration: "reobf")
+    include project(path: ":nms:v1_19_4", configuration: "reobf")
 }
 
 bukkit {
