--- a/nms/build.gradle
+++ b/nms/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compileOnly project(":nms:v1_21_4")
     compileOnly project(':nms:v1_20_4')
     compileOnly project(":nms:v1_20_2")
+    compileOnly project(":nms:v1_19_4")
 }
 
 compileJava {
