--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     include project(path: ":nms:v1_20_4", configuration: "reobf")
     include project(path: ":nms:v1_20_2", configuration: "reobf")
     include project(path: ":nms:v1_19_4", configuration: "reobf")
+
+    include 'cn.afternode.commons:bukkit:2.7.1'
 }
 
 bukkit {
