--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ out/
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
+# Eclipse
+.classpath
+.project
+.settings
+.metadata
+
 # JIRA plugin
 atlassian-ide-plugin.xml
 
