--- a/build.gradle
+++ b/build.gradle
@@ -62,10 +62,9 @@ dependencies {
     include 'org.bstats:bstats-bukkit:3.0.2'
 
     include project(":nms")
-    include project(path: ":nms:v1_21_4", configuration: "reobf")
-    include project(path: ":nms:v1_20_4", configuration: "reobf")
-    include project(path: ":nms:v1_20_2", configuration: "reobf")
-    include project(path: ":nms:v1_19_4", configuration: "reobf")
+    for (String version : new String[]{"v1_21_4", "v1_20_4", "v1_20_2", "v1_19_4"}) {
+        include project(path: ":nms:$version", configuration: "reobf")
+    }
 
     include 'cn.afternode.commons:bukkit:2.7.1'
 }
