--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     include 'org.bstats:bstats-bukkit:3.0.2'
 
     include project(":nms")
-    for (String version : new String[]{"v1_21_4", "v1_20_4", "v1_20_2", "v1_19_4"}) {
+    for (String version : new String[]{"v1_21_4", "v1_20_4", "v1_20_2", "v1_19_4", "v1_18_2"}) {
         include project(path: ":nms:$version", configuration: "reobf")
     }
 
@@ -72,7 +72,7 @@ dependencies {
 bukkit {
     name = "PowerfulFireworks"
     main = "org.eu.pcraft.powerfulfireworks.PowerfulFireworks"
-    apiVersion = "1.19"
+    apiVersion = "1.18"
 }
 
 runServer {
