--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ allprojects {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/groups/public/"
         }
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -60,6 +61,7 @@ configurations {
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT'
     include 'org.bstats:bstats-bukkit:3.0.2'
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
 
     include project(":nms")
     for (String version : new String[]{"v1_21_4", "v1_20_4", "v1_20_2", "v1_19_4", "v1_18_2"}) {
@@ -73,6 +75,7 @@ bukkit {
     name = "PowerfulFireworks"
     main = "org.eu.pcraft.powerfulfireworks.PowerfulFireworks"
     apiVersion = "1.18"
+    depend = ['Vault']
 }
 
 runServer {
