--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -3,3 +3,9 @@ version: '1.0-SNAPSHOT'
 main: org.eu.pcraft.powerfulfireworks.PowerfulFireworks
 description: PowerfulFireworks
 api-version: '1.19'
+dependencies:
+  server:
+    Vault:
+      load: AFTER
+      required: true
+      join-classpath: true
