--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,10 @@ dependencies {
     compileOnly "com.github.MilkBowl:VaultAPI:1.7"
 
     include project(":nms")
-    for (String version : new String[]{"v1_21_4", "v1_20_4", "v1_20_2", "v1_19_4", "v1_18_2"}) {
+    for (String version : new String[]{"v1_21_4"}) {    // versions with remapper
+        include project(path: ":nms:$version")
+    }
+    for (String version : new String[]{"v1_20_4", "v1_20_2", "v1_19_4", "v1_18_2"}) {   // versions without remapper
         include project(path: ":nms:$version", configuration: "reobf")
     }
 
