--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -66,3 +66,8 @@ jobs:
     # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
     - name: Generate and submit dependency graph
       uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: Package JAR
+        path: build/libs
