重构部分代码&修复textfireworks部分问题

--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,5 @@
 name: PowerfulFireworks
-version: '1.0-SNAPSHOT'
+version: '1.5'
 main: org.eu.pcraft.powerfulfireworks.PowerfulFireworks
 description: PowerfulFireworks
 api-version: '1.19'
